final changes for new branch

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
     <header>
         <div id="container">
+
             <div id="initial">
                 <img src="./book.png" alt="livro">
             </div>
+
             <div id="info">
 
                 <label for="input-title">Titulo do Livro
@@ -30,11 +32,17 @@
                         id="floatingTextarea2" style="height: 100px"></textarea>
                     <button type="button" id='git' class="button-28">Enviar</button>
                 </label>
-                
 
             </div>
+
         </div>
     </header>
+
+    <main>
+        
+
+    </main>
+
 
     <script src="./script.js"></script>
 </body>
